# yreport

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_yreport.py
yreport/: diagnostics.py  health.py  recommend.py  report.py  sklearn.py
