[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yreport"
version = "0.1.3"
description = "Dataset-agnostic data health report for tabular datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Yogesh Kardile", email = "kardile.work@gmail.com" }
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "scikit-learn",
    "scipy"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yogeshkardile/yreport"
Repository = "https://github.com/yogeshkardile/yreport"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
preview = false

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]  # Note: 'lint' section
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]  # Note: 'lint.per-file-ignores'
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
